# formatify

./: Cargo.toml  LICENSE  README.md
src/: formatify_formatter.rs  lib.rs  output_format.rs  parsing_context.rs  parsing_task.rs  parsing_task_extract_placeholder_keys.rs  parsing_task_measure_lengths.rs  parsing_task_replace_placeholders.rs  peek_char_iterator.rs  placeholder_formatter.rs
